third_party/WebKit/Source/platform/graphics/ImageFrameGenerator.h
@@ -115,6 +115,7 @@ private:
 
     bool m_isMultiFrame;
     bool m_decodeFailed;
+    bool m_yuvDecodingFailed;
     size_t m_frameCount;
     Vector<bool> m_hasAlpha;
 
